--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
-        cd infra_project/
+        cd yamdb_workflow/
         python manage.py test
 
   build_and_push_to_docker_hub:
