--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 # Вызывает сборщик контейнеров docker
+        uses: docker/setup-buildx-action@v1
       - name: Login to Docker
         uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
         with:
